// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="#block-7033e374-b102-4ec5-a340-623f9c433e3f"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading parent"
      />
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="#block-9103c389-d5c7-4287-a7ad-e272bc61a68e"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading child"
      />
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="#block-12df094f-a677-4ab2-882d-1821a10307e5"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="#block-12df094f-a677-4ab2-882d-1821a10307e5"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
